--- a/index.html
+++ b/index.html
@@ -11,28 +11,36 @@
 
     <div id="after_submit"></div>
     <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+
       <div class="row">
         <label class="required" for="name">Nom:</label><br />
         <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
         <span id="name_validation" class="error_message"></span>
       </div>
+
       <div class="row">
         <label class="required" for="name">Ton prenom:</label><br />
         <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
         <span id="name_validation" class="error_message"></span>
       </div>
+
       <div class="row">
         <label class="required" for="email">Adresse email:</label><br />
         <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
         <span id="email_validation" class="error_message"></span>
       </div>
+
       <div class="row">
         <label class="required" for="message">Ton message:</label><br />
         <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
         <span id="message_validation" class="error_message"></span>
       </div>
         
-        <input id="submit_button" type="submit" value="Send email" />
+        <input id="submit_button" type="submit" value="envoyer votre email" />
     </form> 
 </body>
+<footer>
+    <a href="copie"></a>
+    </article>  
+</footer>
 </html>
